stylesheet.css
body{
	border: 1px solid #gray;
	border-radius: 3px;
	width: 1000px;
	margin-right: auto;
	margin-left: auto;
	background: #222;
	font-family: 'open sans';
}
header{
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e5e5e5+100;White+3D */
	background: #e5e5e5; /* Old browsers */
	border-radius:10px;
	background: -moz-linear-gradient(top,  #e5e5e5 0%,#ffffff  100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(top,  #e5e5e5 0%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to bottom,  #e5e5e5 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
	margin-top: 50px;
	padding-top:150px;
}
section{
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e5e5e5+100;White+3D */
	border-radius:5px;
	background: #e5e5e5; /* Old browsers */
	background: -moz-linear-gradient(top,  #e5e5e5 0%,#ffffff  100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(top,  #e5e5e5 0%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to bottom,  #e5e5e5 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
}
.title-img{
	border:2px solid black;
	border-radius:100%;
	width:	150px;
	height: 200px;
	margin-right: auto;
	margin-left: auto;
	margin-top: 150px;
	margin-bottom: -150px;
	display:block;
}
.title{
	text-align: center;
	margin-bottom: -5px;
	margin-right: auto;
	margin-left: auto;
	padding-bottom: 50px;
}
.sub-title{
	margin-top: -1px;
	text-align: center;
	margin-right: auto;
	margin-left: auto;
	padding-top: 50px;
	padding-left: 50px;
	padding-right: 50px;
}
.title-main{
	text-align: center;
	margin-right: auto;
	margin-left: auto;
}
.nav-menu{
	list-style-type: none;
    margin: 0;
    padding: 0;
}
.nav {
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #222;
    font-size: 20px;
    line-height: 50px;
}
.nav-li{
	float:left;
}
.resume{
	padding-left:25px;
}
.resume-title{
	margin-top: -1px;
	margin-right: auto;
	margin-left: 50px;
	padding-top: 10px;
	padding-left: 50px;
	text-decoration: underline;
	font-weight:400px;
}
p{
	padding-bottom: 50px;
	padding-left: 50px;
	padding-right: 50px;
}
li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}
li a:hover {
    background-color: #111;
}
ul{
	list-style-type: none;
    margin: 0;
   	padding-left: 50px;
	padding-right: 50px;
    margin-left: 50px;
    font-size: 20px;
    line-height: 50px;
}
.right{
	float:right;
	margin-top:-200px;
	margin-right: 150px;
}
.left{
	width: 300px;
	margin-left:150px;
}
.hobbies{
	width: 1000px;
}

